[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/AssetsAlternativo/Fonts/ChiKareGo2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=2]
[ext_resource path="res://Scripts/TextAnimation.gd" type="Script" id=3]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/W-Key.png" type="Texture" id=4]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/S-Key.png" type="Texture" id=5]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/D-Key.png" type="Texture" id=6]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/A-Key.png" type="Texture" id=7]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/Space-Key.png" type="Texture" id=8]
[ext_resource path="res://Scripts/WASDAnimatedText.gd" type="Script" id=9]
[ext_resource path="res://Assets/AssetsAlternativo/Keys/Esc-Key.png" type="Texture" id=10]
[ext_resource path="res://Scripts/LabelEsc.gd" type="Script" id=11]


[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "SpaceAnimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Nova Animação"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 0.450625 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../A-Key:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../D-Key:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../S-Key:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../A-Key:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../D-Key:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../S-Key:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="InteractBg" type="ColorRect" parent="."]
margin_left = 544.0
margin_top = 96.0
margin_right = 992.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 72, 264 )
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="WalkBg" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = 96.0
margin_right = 480.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 416, 176 )
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="WalkBg2" type="ColorRect" parent="."]
margin_left = 272.0
margin_top = 400.0
margin_right = 720.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 416, 176 )
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="GobackButton" type="Button" parent="."]
margin_left = 32.0
margin_top = 8.0
margin_right = 782.0
margin_bottom = 81.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "< Press space to go back"
flat = true

[node name="Esc-Key" type="Sprite" parent="."]
position = Vector2( 360, 488 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 10 )
hframes = 2

[node name="LabelEsc" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_top = 472.0
margin_right = 64.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 5 )
text = "Menu"
align = 1
autowrap = true
script = ExtResource( 11 )

[node name="TweenLabel" type="Tween" parent="LabelEsc"]

[node name="Label2" type="Label" parent="LabelEsc"]
anchor_left = 0.68
anchor_top = 0.413
anchor_right = 0.68
anchor_bottom = 0.413
margin_left = -24.96
margin_top = -16.52
margin_right = -11.96
margin_bottom = 12.48
custom_fonts/font = SubResource( 6 )
text = "|"

[node name="TweenLabel2" type="Tween" parent="LabelEsc/Label2"]

[node name="TweenLabel21" type="Tween" parent="LabelEsc/Label2"]

[node name="Space-Key" type="Sprite" parent="."]
position = Vector2( 760, 208 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 8 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Space-Key"]
anims/RESET = SubResource( 8 )
anims/SpaceAnimation = SubResource( 9 )

[node name="LabelSpace" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 112.0
margin_top = 300.0
margin_right = 368.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 5 )
text = "Interact / Action"
align = 1
autowrap = true
script = ExtResource( 3 )

[node name="TweenLabelSpace" type="Tween" parent="LabelSpace"]

[node name="Label2Space" type="Label" parent="LabelSpace"]
anchor_left = 0.68
anchor_top = 0.413
anchor_right = 0.68
anchor_bottom = 0.413
margin_left = -142.08
margin_top = -15.694
margin_right = -129.08
margin_bottom = 13.306
custom_fonts/font = SubResource( 6 )
text = "|"

[node name="TweenLabelSpace2" type="Tween" parent="LabelSpace/Label2Space"]

[node name="TweenLabelSpace21" type="Tween" parent="LabelSpace/Label2Space"]

[node name="W-Key" type="Sprite" parent="."]
position = Vector2( 248, 152 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="W-Key"]
"anims/Nova Animação" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="A-Key" type="Sprite" parent="."]
position = Vector2( 160, 232 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )
hframes = 2
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="D-Key" type="Sprite" parent="."]
position = Vector2( 336, 232 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 6 )
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="S-Key" type="Sprite" parent="."]
position = Vector2( 248, 232 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -312.0
margin_top = 296.0
margin_right = -240.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 5 )
text = "Walk"
align = 1
autowrap = true
script = ExtResource( 9 )

[node name="TweenLabel" type="Tween" parent="Label"]

[node name="Label2" type="Label" parent="Label"]
visible = false
anchor_left = 0.68
anchor_top = 0.413
anchor_right = 0.68
anchor_bottom = 0.413
margin_left = -24.96
margin_top = -16.52
margin_right = -11.96
margin_bottom = 12.48
custom_fonts/font = SubResource( 6 )
text = "|"

[node name="TweenLabel2" type="Tween" parent="Label/Label2"]

[node name="TweenLabel21" type="Tween" parent="Label/Label2"]

[connection signal="pressed" from="GobackButton" to="." method="_on_GobackButton_pressed"]
